# Nomi-Nomi

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt  main.cpp
Nomi1/: CMakeLists.txt  main.cpp  timer.cpp  timer.h
Nomi2/: CMakeLists.txt  main.cpp
configs/: client.toml  primary.toml  server.toml
src/: CMakeLists.txt  Connector.cpp  Connector.h  acceptor.cpp  acceptor.h  connection.cpp  connection.h  connector.cpp  connector.h  daemoninfo.h  iacceptor.h  iconnection.h  iconnector.h  idivider.h  imanager.h  imessageio.h  initconnector.cpp  initconnector.h  ireader.h  itimer.cppm  itimer.h  manager.cpp  manager.h  message.capnp  message.capnp.c++  message.capnp.h  messageio.cpp  messageio.h  messagetype.h  nodereader.cpp  nodereader.h  packet.h  repeattimer.cpp  repeattimer.h  requestreader.cpp  requestreader.h  sslacceptor.cpp  sslacceptor.h  sslconnection.cpp  sslconnection.h  (+2 more)
src/utility/: capnpreader.h  config.h  packetreader.h
tests/: CMakeLists.txt  connector.cpp  initconnector.cpp
tests/mocks/: mockconnection.h  mocktimer.h
